// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLIGuide renders the contents when open 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 cdNRLn CLIGuide__StyledAccordion-sc-1q6mc5x-0 eBAeQV"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hDxjsI"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButtonKind-sc-1vhfpnt-0 VVdqz"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 bBHevx"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 gBqsaO"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 hgRsLg fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 hBrTTp"
              />
              <span
                class="StyledText-sc-1sadyjn-0 bzsgTm"
              >
                Get something from somewhere
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dvTQWz"
            >
              <svg
                aria-label="FormUp"
                class="StyledIcon-sc-ofa7kd-0 jczakk"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 15-6-6-6 6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 jLMOlN"
          style=""
        >
          <div
            aria-hidden="false"
            class="StyledBox-sc-13pk1d4-0 jLMOlN Collapsible__AnimatedBox-sc-15kniua-0 hnJGLq"
            open=""
            style="max-height: 0;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 juQWaQ"
            >
              Just some content
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuide renders without crashing 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 cdNRLn CLIGuide__StyledAccordion-sc-1q6mc5x-0 eBAeQV"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hDxjsI"
      >
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButtonKind-sc-1vhfpnt-0 VVdqz"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 bBHevx"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 gBqsaO"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 hgRsLg fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 hBrTTp"
              />
              <span
                class="StyledText-sc-1sadyjn-0 bzsgTm"
              >
                Get something from somewhere
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dvTQWz"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 jczakk"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 jLMOlN"
        >
          <div
            aria-hidden="true"
            class="StyledBox-sc-13pk1d4-0 jLMOlN Collapsible__AnimatedBox-sc-15kniua-0 jtbjrr"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
